cosmetic changes in publications

--- a/index.html
+++ b/index.html
@@ -175,63 +175,52 @@
 								<h3>Invited Talks</h3>
 								<ul>
 									<li>
-										<b>Champagne-Ruel, A.</b> (2025). <br>
-										Physics of Complexity And Agnostic Life Detection. <br>
-										<i>Trottier Institute for Research on Exoplanets (Canada)</i>.
-									</li>
-									<li>
-										<b>Champagne-Ruel, A.</b> (2025). <br>
-										Spatial Patterning and Selection: How the Environment Shapes Molecular Complexity. <br>
+										<b>Spatial Patterning and Selection.</b> (2025). <br>
 										<i>Max Planck Institute for Terrestrial Microbiology (Germany)</i>.
 									</li>
 									<li>
-										<b>Champagne-Ruel, A.</b> (2024). <br>
-										From Emergent Complexity to Reliable Life Detection. <br>
-										<i>Arizona State University</i>.
+										<b>Physics of Complexity And Agnostic Life Detection.</b> (2025). <br>
+										<i>Trottier Institute for Research on Exoplanets (Canada)</i>.
 									</li>
 									<li>
-										<b>Champagne-Ruel, A.</b> (2022). <br>
-										Coopération, émergence et transitions : comment la physique statistique peut nous éclairer sur la question des origines. <br>
-										<i>Qu’est-ce qu’expliquer une origine en science ? (CIRST, UQAM)</i>.
+										<b>From Emergent Complexity to Reliable Life Detection.</b> (2024). <br>
+										<i>Arizona State University (USA)</i>.
+									</li>
+									<li>
+										<b>Coopération, émergence et transitions.</b> (2022). <br>
+										<i>Université du Québec à Montréal (Canada)</i>.
 									</li>
 								</ul>
 
 								<h3>Contributed Talks</h3>
 								<ul>
 									<li>
-										<b>Champagne-Ruel, A.</b>, & Mathis, C. (2025). <br>
-										From Emergent Complexity to Reliable Life Detection. <br>
-										<i>BEACON (Iceland)</i>.
+										<b>From Emergent Complexity to Reliable Life Detection.</b> (2025). <br>
+										<i>Biennial European Astrobiology Conference (BEACON) (Iceland)</i>.
 									</li>
 									<li>
-										<b>Champagne-Ruel, A.</b> (2024). <br>
-										Diffusion: An Overlooked Driver of Prebiotic Complexity. <br>
-										<i>AbSciCon (Providence)</i>.
+										<b>Diffusion: An Overlooked Driver of Prebiotic Complexity.</b> (2024). <br>
+										<i>Astrobiology Science Conference (AbSciCon) (USA)</i>.
 									</li>
 									<li>
-										<b>Champagne-Ruel, A.</b> (2023). <br>
-										Théorie de l’information et origine de la vie. <br>
-										<i>90e Congrès de l’ACFAS</i>.
+										<b>Théorie de l’information et origine de la vie.</b> (2023). <br>
+										<i>90e Congrès de l’ACFAS (Canada)</i>.
 									</li>
 									<li>
-										<b>Champagne-Ruel, A.</b> (2022). <br>
-										Cooperation: An Emergent Universal Feature at the Dawn of Life. <br>
-										<i>Interdisciplinary Origin of Life Meeting for Early Career Researchers (Montréal)</i>.
+										<b>A Mutation Threshold for Cooperative Takeover.</b> (2022). <br>
+										<i>Astrobiology Science Conference (AbSciCon) (USA)</i>.
 									</li>
 									<li>
-										<b>Champagne-Ruel, A.</b> (2022). <br>
-										A Mutation Threshold for Cooperative Takeover. <br>
-										<i>AbSciCon (Atlanta)</i>.
+										<b>Cooperation: An Emergent Universal Feature at the Dawn of Life.</b> (2022). <br>
+										<i>Interdisciplinary Origin of Life Meeting for Early Career Researchers (Canada)</i>.
 									</li>
 									<li>
-										<b>Champagne-Ruel, A.</b> (2021). <br>
-										Mutation Favors the Emergence of Cooperation. <br>
-										<i>Life and Space Poland</i>.
+										<b>Mutation Favors the Emergence of Cooperation.</b> (2021). <br>
+										<i>Life and Space Poland (Poland)</i>.
 									</li>
 									<li>
-										<b>Champagne-Ruel, A.</b> (2019). <br>
-										La criticalité dans un système évolutif artificiel. <br>
-										<i>Centre de recherche en astrophysique du Québec (CRAQ) - Rencontre annuelle</i>.
+										<b>La criticalité dans un système évolutif artificiel.</b> (2019). <br>
+										<i>Centre de recherche en astrophysique du Québec (CRAQ) (Canada)</i>.
 									</li>
 								</ul>
 							</article>
