remove extra dots and commented out stuff

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Alexandre Champagne-Ruel</title>
@@ -24,16 +19,11 @@
 
 				<!-- Header -->
 					<header id="header">
-						<!-- div class="logo">
-							<span class="icon fa-gem"></span>
-						</div -->
 						<div class="content">
 							<div class="inner">
 								<h1>Alexandre Champagne-Ruel</h1>
 								<h2>NASA Postdoctoral Fellow</h2>
 								<h3>Arizona State University</h3>
-								<!-- p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p -->
 							</div>
 						</div>
 						<nav>
@@ -41,16 +31,11 @@
 								<li><a href="#intro">About Me</a></li>
 								<li><a href="#research">Research</a></li>
 								<li><a href="#publications">Publications</a></li>
-								<!--<li><a href="#about">Talks</a></li>-->
 								<li><a href="https://alexandrechampagne.io/cv/cv.pdf" target="_blank">CV</a></li>
-								<!--<li><a href="#contact">Contact</a></li>-->
-								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
 						<ul class="icons">
 							<li><a href="https://bsky.app/profile/alexchampagne.bsky.social" class="fa-brands fa-bluesky" target="_blank"><span class="label"></span></a></li>
-							<!-- li><a href="#" class="fa-brands fa-facebook-f"><span class="label"></span></a></li -->
-							<!-- li><a href="#" class="fa-brands fa-instagram"><span class="label"></span></a></li -->
 							<li><a href="https://github.com/champagnealexandre" class="fa-brands fa-github" target="_blank"><span class="label"></span></a></li>
 							<li><a href="mailto:alexandre.champagne@asu.edu" class="fa-solid fa-envelope"><span class="label"></span></a></li>
 						</ul>
@@ -153,21 +138,21 @@
 								<h3>Published Articles</h3>
 								<ul>
 									<li>
-										<b>Champagne-Ruel, A.</b>, Zakaib-Bernier, S., & Charbonneau, P. (2024). <br>
-										Diffusion and Pattern Formation in Spatial Games. <br>
-										<i>Physical Review E</i>, 110(1), 014301. <br>
+										<b>Champagne-Ruel, A.</b>, Zakaib-Bernier, S., & Charbonneau, P. (2024) <br>
+										Diffusion and Pattern Formation in Spatial Games <br>
+										<i>Physical Review E</i>, 110(1), 014301 <br>
 										<a href="https://doi.org/10.1103/PhysRevE.110.014301" target="_blank">DOI: 10.1103/PhysRevE.110.014301</a>
 									</li>
 									<li>
-										<b>Champagne-Ruel, A.</b>, & Charbonneau, P. (2022). <br>
-										A Mutation Threshold for Cooperative Takeover. <br>
-										<i>Life</i>, 12(2), 254. <br>
+										<b>Champagne-Ruel, A.</b>, & Charbonneau, P. (2022) <br>
+										A Mutation Threshold for Cooperative Takeover <br>
+										<i>Life</i>, 12(2), 254 <br>
 										<a href="https://doi.org/10.3390/life12020254" target="_blank">DOI: 10.3390/life12020254</a>
 									</li>
 									<li>
-										Gelin, S., <b>Champagne-Ruel, A.</b>, & Mousseau, N. (2020). <br>
-										Enthalpy-Entropy Compensation of Atomic Diffusion Originates from Softening of Low Frequency Phonons. <br>
-										<i>Nature Communications</i>, 11(1), 3977. <br>
+										Gelin, S., <b>Champagne-Ruel, A.</b>, & Mousseau, N. (2020) <br>
+										Enthalpy-Entropy Compensation of Atomic Diffusion Originates from Softening of Low Frequency Phonons <br>
+										<i>Nature Communications</i>, 11(1), 3977 <br>
 										<a href="https://doi.org/10.1038/s41467-020-17812-2" target="_blank">DOI: 10.1038/s41467-020-17812-2</a>
 									</li>
 								</ul>
@@ -175,334 +160,54 @@
 								<h3>Invited Talks</h3>
 								<ul>
 									<li>
-										<b>Spatial Patterning and Selection.</b> (2025). <br>
-										<i>Max Planck Institute for Terrestrial Microbiology (Germany)</i>.
+										<b>Spatial Patterning and Selection</b> (2025) <br>
+										<i>Max Planck Institute for Terrestrial Microbiology (Germany)</i>
 									</li>
 									<li>
-										<b>Physics of Complexity And Agnostic Life Detection.</b> (2025). <br>
-										<i>Trottier Institute for Research on Exoplanets (Canada)</i>.
+										<b>Physics of Complexity And Agnostic Life Detection</b> (2025) <br>
+										<i>Trottier Institute for Research on Exoplanets (Canada)</i>
 									</li>
 									<li>
-										<b>From Emergent Complexity to Reliable Life Detection.</b> (2024). <br>
-										<i>Arizona State University (USA)</i>.
+										<b>From Emergent Complexity to Reliable Life Detection</b> (2024) <br>
+										<i>Arizona State University (USA)</i>
 									</li>
 									<li>
-										<b>Coopération, émergence et transitions.</b> (2022). <br>
-										<i>Université du Québec à Montréal (Canada)</i>.
+										<b>Coopération, émergence et transitions</b> (2022) <br>
+										<i>Université du Québec à Montréal (Canada)</i>
 									</li>
 								</ul>
 
 								<h3>Contributed Talks</h3>
 								<ul>
 									<li>
-										<b>From Emergent Complexity to Reliable Life Detection.</b> (2025). <br>
-										<i>Biennial European Astrobiology Conference (BEACON) (Iceland)</i>.
+										<b>From Emergent Complexity to Reliable Life Detection</b> (2025) <br>
+										<i>Biennial European Astrobiology Conference (BEACON) (Iceland)</i>
 									</li>
 									<li>
-										<b>Diffusion: An Overlooked Driver of Prebiotic Complexity.</b> (2024). <br>
-										<i>Astrobiology Science Conference (AbSciCon) (USA)</i>.
+										<b>Diffusion: An Overlooked Driver of Prebiotic Complexity</b> (2024) <br>
+										<i>Astrobiology Science Conference (AbSciCon) (USA)</i>
 									</li>
 									<li>
-										<b>Théorie de l’information et origine de la vie.</b> (2023). <br>
-										<i>90e Congrès de l’ACFAS (Canada)</i>.
+										<b>Théorie de l’information et origine de la vie</b> (2023) <br>
+										<i>90e Congrès de l’ACFAS (Canada)</i>
 									</li>
 									<li>
-										<b>A Mutation Threshold for Cooperative Takeover.</b> (2022). <br>
-										<i>Astrobiology Science Conference (AbSciCon) (USA)</i>.
+										<b>A Mutation Threshold for Cooperative Takeover</b> (2022) <br>
+										<i>Astrobiology Science Conference (AbSciCon) (USA)</i>
 									</li>
 									<li>
-										<b>Cooperation: An Emergent Universal Feature at the Dawn of Life.</b> (2022). <br>
-										<i>Interdisciplinary Origin of Life Meeting for Early Career Researchers (Canada)</i>.
+										<b>Cooperation: An Emergent Universal Feature at the Dawn of Life</b> (2022) <br>
+										<i>Interdisciplinary Origin of Life Meeting for Early Career Researchers (Canada)</i>
 									</li>
 									<li>
-										<b>Mutation Favors the Emergence of Cooperation.</b> (2021). <br>
-										<i>Life and Space Poland (Poland)</i>.
+										<b>Mutation Favors the Emergence of Cooperation</b> (2021) <br>
+										<i>Life and Space Poland (Poland)</i>
 									</li>
 									<li>
-										<b>La criticalité dans un système évolutif artificiel.</b> (2019). <br>
-										<i>Centre de recherche en astrophysique du Québec (CRAQ) (Canada)</i>.
+										<b>La criticalité dans un système évolutif artificiel</b> (2019) <br>
+										<i>Centre de recherche en astrophysique du Québec (CRAQ) (Canada)</i>
 									</li>
 								</ul>
-							</article>
-
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">Talks</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
-							</article>
-
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</article>
-
-						<!-- Elements -->
-							<article id="elements">
-								<h2 class="major">Elements</h2>
-
-								<section>
-									<h3 class="major">Text</h3>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
-									<hr />
-									<h4>Blockquote</h4>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h4>Preformatted</h4>
-									<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
-								</section>
-
-								<section>
-									<h3 class="major">Lists</h3>
-
-									<h4>Unordered</h4>
-									<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Alternate</h4>
-									<ul class="alt">
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Ordered</h4>
-									<ol>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis viverra.</li>
-										<li>Felis enim feugiat.</li>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis lorem.</li>
-										<li>Felis enim et feugiat.</li>
-									</ol>
-									<h4>Icons</h4>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-									</ul>
-
-									<h4>Actions</h4>
-									<ul class="actions">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions stacked">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Table</h3>
-									<h4>Default</h4>
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-
-									<h4>Alternate</h4>
-									<div class="table-wrapper">
-										<table class="alt">
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-								</section>
-
-								<section>
-									<h3 class="major">Buttons</h3>
-									<ul class="actions">
-										<li><a href="#" class="button primary">Primary</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button">Default</a></li>
-										<li><a href="#" class="button small">Small</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button primary icon solid fa-download">Icon</a></li>
-										<li><a href="#" class="button icon solid fa-download">Icon</a></li>
-									</ul>
-									<ul class="actions">
-										<li><span class="button primary disabled">Disabled</span></li>
-										<li><span class="button disabled">Disabled</span></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Form</h3>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="demo-name">Name</label>
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
-											</div>
-											<div class="field half">
-												<label for="demo-email">Email</label>
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
-											</div>
-											<div class="field">
-												<label for="demo-category">Category</label>
-												<select name="demo-category" id="demo-category">
-													<option value="">-</option>
-													<option value="1">Manufacturing</option>
-													<option value="1">Shipping</option>
-													<option value="1">Administration</option>
-													<option value="1">Human Resources</option>
-												</select>
-											</div>
-											<div class="field half">
-												<input type="radio" id="demo-priority-low" name="demo-priority" checked>
-												<label for="demo-priority-low">Low</label>
-											</div>
-											<div class="field half">
-												<input type="radio" id="demo-priority-high" name="demo-priority">
-												<label for="demo-priority-high">High</label>
-											</div>
-											<div class="field half">
-												<input type="checkbox" id="demo-copy" name="demo-copy">
-												<label for="demo-copy">Email me a copy</label>
-											</div>
-											<div class="field half">
-												<input type="checkbox" id="demo-human" name="demo-human" checked>
-												<label for="demo-human">Not a robot</label>
-											</div>
-											<div class="field">
-												<label for="demo-message">Message</label>
-												<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</section>
-
 							</article>
 
 					</div>
