Limit profile image width on About Me page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 			#publications li {
 				margin-bottom: 2em;
 			}
+			#intro .image.main img {
+				max-width: 300px;
+				margin: 0 auto;
+			}
 		</style>
 	</head>
 	<body class="is-preload">
