--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">About Me</h2>
-								<span class="image main"><img src="images/me.jpg" alt="" /></span>
+								<span class="image main"><img src="images/alex.jpg" alt="" /></span>
 								<p style="font-size: 24pt;">Hi!</p>
 								<p>I am a NASA Postdoctoral Fellow and physicist at Arizona State University’s Biodesign Institute. As a member of the <a href="https://mathis-group.github.io" target="_blank">Mathis Group</a>, I investigate the physical principles underlying the origin of life. My research integrates statistical mechanics, information theory, and evolutionary dynamics to understand how spatial environments drive the emergence of complexity.</p>
 								<p>I completed my PhD at the Université de Montréal in 2025. My thesis, <a href="https://hdl.handle.net/1866/42175" target="_blank">La spatialité dans l’évolution prébiotique : vers une physique de l’émergence de la complexité</a> (<i>Spatiality in prebiotic evolution: toward a physics of the emergence of complexity</i>), explored how spatial structure can shape the emergence of molecular and evolutionary complexity.</p>
